syntax = "proto3";

package google;

service GoogleService {
  rpc RequestAuthorization (Empty) returns (RequestAuthSent) {}
  rpc RequestAccessToken (RequestAccessTokenParams) returns (RequestAccessTokenSent) {}
  // rpc RequestAccessGmail (Empty) returns (RequestAuthSent) {}
  rpc SendEmail (SendEmailParams) returns (Empty) {}
  rpc SendEmailToYourself (SendEmailToYourselfParams) returns (Empty) {}
  rpc LoginWithGoogle (Empty) returns (AccessToken) {}
  rpc GetNbLikedVideos (Empty) returns (Empty) {}
  rpc CheckNewLikedVideos (Empty) returns (NewLikedVideos) {}
  rpc GetNbSubscriptions (Empty) returns (Empty) {}
  rpc CheckNewSubscriptions (Empty) returns (NewSubscriptions) {}
  rpc RefreshToken (Empty) returns (Empty) {}
}

message Empty {}

message RequestAuthSent {
  string url = 1;
}

message RequestAccessTokenParams {
  string code = 1;
}

message RequestAccessTokenSent {
  string accessToken = 1;
  string tokenType = 2;
}

message AccessToken {
  string accessToken = 1;
  string userId = 2;
}

message SendEmailParams {
  string recipient = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailToYourselfParams {
  string subject = 1;
  string body = 2;
}

message NewLikedVideos {
  repeated NewLikedVideo newLikedVideos = 1;
}

message NewLikedVideo {
  string title = 1;
  string description = 2;
  string url = 3;
  string publishedAt = 4;
  string channel = 5;
}

message NewSubscriptions {
  repeated NewSubscription newSubscriptions = 1;
}

message NewSubscription {
  string title = 1;
  string description = 2;
  string url = 3;
}
